@@ -223,7 +223,8 @@ public abstract class MultithreadedTest {
 
 		Random r = new Random(52465534);
 
-		ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+		// Does refactoring this cause problems??
+		ExecutorService executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() * 2);
 
 		try {
 			for (int i = 0; i < 3; i++) {
